--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
@@ -9,18 +9,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: orange ;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(2px + 2vmin);
+  color: black;
 }
 
 .App-link {
-  color: #61dafb;
+  color: green;
 }
 
 @keyframes App-logo-spin {
@@ -28,6 +28,6 @@
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(240deg);
   }
 }
